--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jmix.ui.mainScreenId = petclinic_MainScreen
 jmix.ui.menuConfig = io/jmix/petclinic/menu.xml
 jmix.ui.compositeMenu = true
 
-jmix.core.availableLocales = en
+jmix.core.availableLocales = en,de
 
 logging.level.org.atmosphere = warn
 jmix.ui.theme.name=petclinic
