--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "io.jmix.ui:jmix-ui-themes"
     implementation "io.jmix.datatools:jmix-datatools-starter"
     implementation "io.jmix.datatools:jmix-datatools-ui-starter"
+    implementation "io.jmix.translations:jmix-translations-de"
 }
 
 test {
