--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation "io.jmix.datatools:jmix-datatools-starter"
     implementation "io.jmix.datatools:jmix-datatools-ui-starter"
     implementation "io.jmix.translations:jmix-translations-de"
+
+
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.2.4'
 }
 
 test {
