--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation "io.jmix.datatools:jmix-datatools-starter"
     implementation "io.jmix.datatools:jmix-datatools-ui-starter"
     implementation "io.jmix.translations:jmix-translations-de"
-
+    implementation "io.jmix.translations:jmix-translations-zh-cn"
 
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.mockito:mockito-core:3.2.4'
