--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.2.4'
+
+
+    testImplementation 'io.jmix.ui:jmix-ui-test-assist'
 }
 
 test {
