--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ petclinic.testdata.visit.visitStartAmountPastDays = 350
 petclinic.testdata.visit.visitStartAmountFutureDays = 60
 petclinic.testdata.visit.amountPerDay = 10
 petclinic.testdata.visit.descriptionOptions = Regular Checkup, Surgery, Fever
+
+# GraphIQl config
+graphiql.props.variables.headerEditorEnabled=true
