--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/petclinic-empty-6
+main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/petclinic
 main.datasource.username = sa
 main.datasource.password =
 
