--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/petclinic
 main.datasource.username = sa
 main.datasource.password =
 
+main.liquibase.change-log=io/jmix/petclinic/liquibase/changelog.xml
 jmix.ui.loginScreenId = petclinic_LoginScreen
 jmix.ui.mainScreenId = petclinic_MainScreen
 jmix.ui.menuConfig = io/jmix/petclinic/menu.xml
