Upgrade to Jmix 1.6.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ jmix.ui.compositeMenu = true
 jmix.core.availableLocales = en,de,zh_CN,ru
 
 logging.level.org.atmosphere = warn
+logging.level.org.atmosphere.util.IOUtils=error
+logging.level.com.vaadin.spring.internal.BeanStore=error
 jmix.ui.theme.name=petclinic
 jmix.ui.themeConfig=io/jmix/petclinic/theme/petclinic-theme.properties
 
